<resources>
    <string name="app_name">iSoundCloud</string>
    <string name="channel_name">iSoundCloud</string>
    <string name="channel_description">A notification channel of iSoundCloud</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_library">Library</string>
    <string name="label_recently_downloaded">Recently downloaded</string>
    <string name="label_genres">Genres</string>
    <string name="label_all_music">All Music</string>
    <string name="label_all_audio">All Audio</string>
    <string name="label_alternative_rock">Alternative Rock</string>
    <string name="label_ambient">Ambient</string>
    <string name="label_classical">Classical</string>
    <string name="label_country">Country</string>
    <string name="desc_no_song_available">No song available!</string>
    <string name="label_loading">Loading</string>
    <string name="label_download">Download</string>
    <string name="label_add_to_playlist">Add to playlist</string>
    <string name="label_add_to_favorite">Add to favorite</string>
    <string name="label_remove_from_favorite">Remove from favorite</string>
    <string name="default_duration">00:00</string>
    <string name="action_previous">Previous</string>
    <string name="action_state_change">Play/Pause</string>
    <string name="action_next">Next</string>
    <string name="error_player">There has been an error with the player, please try another track.</string>
    <string name="text_search_track">Search track…</string>
    <string name="error_download_track">Cannot download track.</string>
    <string name="msg_downloading_track">Downloading %s.</string>
    <string name="msg_downloaded_track">Download completed.</string>
    <string name="error_update_downloaded_track">Cannot update downloaded track</string>
    <string name="msg_already_downloaded">You had already downloaded this track.</string>
    <string name="msg_added_to_favorite">Added to favorite.</string>
    <string name="msg_removed_to_favorite">Removed from favorite.</string>
    <string name="text_downloaded_tracks">Downloaded tracks</string>
    <string name="text_favorite_tracks">Favorite tracks</string>
    <string name="text_playlist">Playlist</string>
    <string name="text_delete">Delete</string>
    <string name="msg_delete_successfully">Delete successfully.</string>
    <string name="msg_delete_failed">Failed to delete %s.</string>
    <string name="text_adjust_volume">Adjust volume</string>
    <string name="text_create_playlist">Create playlist:</string>
    <string name="text_create_new_playlist">Create new playlist</string>
    <string name="text_existing_playlist">Existing playlist:</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="error_empty_playlist_name">You must enter a name for the playlist.</string>
    <string name="msg_created_playlist_successfully">Created playlist successfully.</string>
    <string name="error_create_new_playlist">Failed to create new playlist.</string>
    <string name="error_failed_to_add_track">Failed to add track to new playlist.</string>
    <string name="error_track_is_in_playlist">You already had this track in the playlist.</string>
    <string name="msg_add_track_to_new_playlist">Added track to the playlist successfully.</string>
    <string name="error_cannot_delete_playing_track">You cannot delete a playing track.</string>
</resources>
