<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10">

    <TextView
        android:id="@+id/text_track_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toStartOf="@id/text_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_track_info" />

    <TextView
        android:id="@+id/text_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/label_add_to_favorite"
        app:layout_constraintBottom_toBottomOf="@id/image_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_favorite"
        app:layout_constraintTop_toTopOf="@id/image_favorite" />

    <ImageView
        android:id="@+id/image_playlist"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/ic_playlist_add"
        app:layout_constraintEnd_toStartOf="@id/text_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_favorite" />

    <TextView
        android:id="@+id/text_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/label_add_to_playlist"
        app:layout_constraintBottom_toBottomOf="@id/image_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_playlist"
        app:layout_constraintTop_toTopOf="@id/image_playlist" />

    <ImageView
        android:id="@+id/image_download"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_10"
        android:src="@drawable/ic_cloud_download"
        app:layout_constraintEnd_toStartOf="@id/text_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_playlist" />

    <TextView
        android:id="@+id/text_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/label_download"
        app:layout_constraintBottom_toBottomOf="@id/image_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_download"
        app:layout_constraintTop_toTopOf="@id/image_download" />
</android.support.constraint.ConstraintLayout>
