<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_downloaded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10">

            <ImageView
                android:id="@+id/image_downloaded"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:src="@drawable/ic_downloadable"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_downloaded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_downloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/text_downloaded_tracks"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/image_downloaded"
                app:layout_constraintStart_toEndOf="@id/image_downloaded"
                app:layout_constraintTop_toTopOf="@id/image_downloaded" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_favorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_downloaded">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10">

            <ImageView
                android:id="@+id/image_favorite"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:src="@drawable/ic_favorite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/text_favorite_tracks"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/image_favorite"
                app:layout_constraintStart_toEndOf="@id/image_favorite"
                app:layout_constraintTop_toTopOf="@id/image_favorite" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_4"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_favorite">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10">

            <ImageView
                android:id="@+id/image_playlist"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:src="@drawable/ic_playlist_play"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/text_playlist"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:text="@string/text_playlist"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@id/image_playlist"
                app:layout_constraintStart_toEndOf="@id/image_playlist"
                app:layout_constraintTop_toTopOf="@id/image_playlist" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
